kifi-backend/modules/shoebox/angular/src/libraries/manageLibrary.styl
.manage-library
  .dialog-content
    padding-bottom: 0

  .dialog-body-wrap
    margin: 0
    padding: 0

  .go-back-button
    position: relative
    margin-right: 20px
    border: 1px solid rgba(166, 175, 189, 0.53)
    border-radius: 6px
    padding: 4px 6px 4px 17px
    background: linear-gradient(to top, #f3f3f3, #fff)
    font-size: 12px
    font-weight: 700
    font-smoothing: antialiased
    color: #5c6373
    cursor: pointer

    &:hover
      background: #e6e8ea

    &:active
      background: #dadcde

    &.disabled
    &.disabled:hover
      background: #f3f5f7
      color: #a9b0c0
      cursor: default

  .go-back-left-arrow
    position: absolute
    top: 1px
    left: 0
    width: 20px
    height: 20px
    cursor: pointer

    &::before
    &::after
      content: ' '
      position: absolute;
      left: 47%
      border-radius: 2px
      width: 2px;
      background: #5c6373
      font-size: 0

    &::before
      top: 4px
      bottom: 8px
      transform: translate(-1px) rotate(45deg)

    &::after
      top: 8px
      bottom: 4px
      transform: translate(-1px) rotate(-45deg)

  .dialog-body
    padding: 0
    overflow: hidden

  .manage-lib-followers-info
    padding: 25px 115px
    background-color: #f3f5f7
    text-align: center

  .manage-lib-followers-stats
    margin: 0 0 8px 0
    font-size: 14px
    font-weight: 700
    color: #5c6373

  .manage-lib-followers-button
    border: 0
    border-radius: 6px
    padding: 15px 20px
    background-color: #7eccf9
    font-size: 12px
    font-weight: 700
    color: white

  .dialog-text
    padding: 0 24px

  .manage-lib-input-wrapper
    margin-bottom: 15px
    margin-top: 25px

  .manage-lib-heading
    display: block
    padding-top: 5px
    font-size: 15px
    font-weight: bold
    color: kifiBlack

  .manage-lib-input-title
    display: inline-block
    width: 115px

  .manage-lib-input
    display: inline-block
    box-sizing: border-box
    border: 1px solid #c7c7c7
    border-radius: 5px
    padding: 10px 15px
    width: 405px
    color: textBlackColor
    vertical-align: top
    placeholder secondaryTextGray

    &:focus
      border: 1px solid blueColor

  .manage-lib-slug
    display: block
    margin: 5px 0 0 122px

    .manage-lib-slug-input
      border-bottom: 1px dotted #c7c7c7
      width: 70px
      placeholder secondaryTextGray

      &.slug-edited
        border-bottom: none
        width: 275px

        &:focus
          color: textBlackColor

  .manage-lib-description-title-input
    padding-top: 10px

  .manage-lib-description-input
    height: 100px
    resize: none

  .manage-lib-visibility
    position: relative
    margin: 20px 0
    min-height: 90px
    overflow: hidden

  .manage-lib-create-visibility-input-container
    display: inline-block
    margin: 0 15px 0 20px

  .manage-lib-visibility-description
    display: inline-block
    width: 310px
    vertical-align: top

  .manage-lib-visibility-description-content
    font-size: 15px
    line-height: 18px

  .manage-lib-choice-card
    display: inline-block
    margin-right: 15px
    width: 80px
    vertical-align: top

  .manage-lib-choice-card-img
    margin: 0 auto 5px
    width: 58px
    height: 77px
    background-repeat: no-repeat

  .dialog-buttons
    text-align: left

  .manage-lib-create-button
    display: block
    margin: 0 auto

  .manage-lib-save-button
  .manage-lib-delete-button
    box-sizing: border-box
    display: inline-block
    padding-top: 10px
    width: 152px

  .manage-lib-delete-button
    margin: 0 250px 0 20px

  .manage-lib-error
    display: block
    font-size: 16px
    color: redColor

  .manage-lib-name-error
    margin-top: -5px
    font-size: 12px

  .manage-lib-invite
    display: block
    box-sizing: border-box
    width: 400px
    height: 44px
    text-align: left

    .library-share-menu
      top: 0
      display: block
      margin: 0
      width: 370px

    .library-share-menu-content
      border: none
      box-shadow: none

      .library-share-input-box
        border: none

      .library-share-input.library-share-search-input
        box-sizing: border-box
        border: 1px solid #c7c7c7
        border-radius: 5px
        width: 370px
        background-color: #fff

      .library-share-contact-list
        position: relative
        top: -5px
        border: 1px solid #c7c7c7
        border-bottom-left-radius: 5px
        border-bottom-right-radius: 5px

        &:empty
          display: none

      .library-share-contact-summary
        line-height: 1.2em

      .library-share-contact
        width: 100%

      .library-share-contact-button
        // Override a bunch of global dialog button styles.
        width: inherit
        height: inherit
        line-height: inherit
        font-weight: inherit

        right: 3px
        padding-top: 4px
        padding-bottom: 4px

        &:hover
          color: #666

        &::before
          top: 3px

      .kf-keep-lib-footer-button-icon
        top: 3px

      .library-share-following
        right: 25px

      .library-share-sent
        right: 40px

.manage-lib-followers
  margin: 10px auto
  width: 548px
  height: 377px
  max-height: 377px

.manage-lib-member
  position: relative
  box-sizing: border-box
  padding: 12px 20px
  border-bottom: 1px solid #c7c7c7
  width: 540px
  height: 65px
  background: #fff

  &.manage-lib-owner
    background-color: #f8f8f8

.manage-lib-owner
  font-weight: bold

.manage-lib-member-image
  display: inline-block
  margin-right: 20px
  border-radius: 100%
  width: 42px
  height: 42px

.manage-lib-member-name
  display: inline-block

.manage-lib-member-status
  position: absolute
  top: 22px
  right: 25px
  color: green

  .manage-lib-owner &
    color: kifiBlack

.manage-lib-content
  position: relative
  height: 398px
  overflow: hidden

.manage-lib-default-content
  position: absolute
  left: 15px
  background-color: #fff
  transition: margin ease 0.5s
  z-index: 1060

  &.ng-hide
    margin-left: -600px

.manage-lib-members-content
  height: 100%
  overflow-y: auto
  overflow-x: hidden

//
// Delete library confirm modal
//
.kf-delete-library-confirm-modal
  // Switch the position of the cancel and confirm buttons.
  .dialog-warn
    position: relative
    left: -110px

  .dialog-cancel
    position: relative
    left: 110px

